--- a/drivers/str/linux/Makefile
+++ b/drivers/str/linux/Makefile
@@ -99,7 +99,11 @@ OPT += -DCONFIG_MODVERSIONS
 OPT += -include $(KSRC)/include/config/modversions.h
 endif 
 
-OPT += -DDEFAULT_SYMBOL_NAMESPACE=STREAMS
+ifeq ($(QUOTEDNAMESPACE),y)
+     OPT += -DDEFAULT_SYMBOL_NAMESPACE=\"STREAMS\"
+else
+     OPT += -DDEFAULT_SYMBOL_NAMESPACE=STREAMS
+endif
 
 MODULES	= $(MODLS) $(TMODLS) $(ZMODLS)
 
